# Fomalhaut.jl

./: README.md
Fomalhaut/: Project.toml
Fomalhaut/src/: AsciiArt.jl  FFI.jl  Fomalhaut.jl  Routing.jl  Server.jl  Types.jl  ascii_art_fomalhaut.jl
Fomalhaut/test/: runtests.jl
fomalhaut/: Cargo.toml
fomalhaut/src/: main.rs
fomalhaut_rs/: Cargo.toml
fomalhaut_rs/src/: lib.rs  main.rs
fomalhaut_rs/src/database/: handlers.rs
fomalhaut_rs/src/ffi/: callbacks.rs  errors.rs  mod.rs  routes.rs  server.rs  wave.rs  ws.rs
fomalhaut_rs/src/protocol/: envelope.rs
fomalhaut_rs/src/runtime/: state.rs
fomalhaut_rs/src/transport/: http_server.rs  websocket.rs  websocket_server.rs
scripts/: benchmark_axis_websocket_vs_julia.jl  test_fmhut_http_methods.jl  test_fmhut_options.jl  test_fmhut_post.jl  test_fmhut_sea_route.jl  test_fmhut_websocket.jl  test_sea_orm_workflow.jl
scripts/benchmark_axis_websocket_vs_julia/: _bench_server_julia.jl  _bench_server_native.jl
